changed menu links, commit and circles

--- a/commitments.html
+++ b/commitments.html
@@ -211,8 +211,8 @@ __wm.bt(725,27,25,2,"web","https://upstartcollaboratory.org/our-commitments-assu
 					<button class="menu-toggle">Menu</button>
 					<a class="screen-reader-text skip-link" href="https://web.archive.org/web/20210118181615/https://upstartcollaboratory.org/our-commitments-assumptions/#content" title="Skip to content">Skip to content</a>
 					<div id="primary-menu" class="nav-menu"><ul>
-<li class="page_item page-item-5 current_page_item"><a href="https://web.archive.org/web/20210118181615/https://upstartcollaboratory.org/our-commitments-assumptions/">Our Commitments &amp; Assumptions</a></li>
-<li class="page_item page-item-7"><a href="https://web.archive.org/web/20210118181615/https://upstartcollaboratory.org/the-circles-maps/">The Circles Maps</a></li>
+<li class="page_item page-item-5 current_page_item"><a href="commitments.html">Our Commitments &amp; Assumptions</a></li>
+<li class="page_item page-item-7"><a href="circles.html">The Circles Maps</a></li>
 </ul></div>
 					<form role="search" method="get" class="search-form" action="https://web.archive.org/web/20210118181615/https://upstartcollaboratory.org/">
 				<label>
