Updated circles images and corrected many, maybe all of visible links to remove web.archive or redirect to index

--- a/commitments.html
+++ b/commitments.html
@@ -267,8 +267,10 @@ __wm.bt(725,27,25,2,"web","https://upstartcollaboratory.org/our-commitments-assu
 <li>Everything is interconnected, everything is constantly changing, and everything we do affects the whole world.</li>
 </ul>
 <p><strong>The Circles Maps</strong> are copyright 2001 Jean Robertson.</p>
-<p><a href="https://web.archive.org/web/20210118181615/https://web.archive.org/web/20180831202243/http://creativecommons.org/licenses/by-nc-sa/4.0/" rel="license"><img src="./commitments_files/88x31.png" alt="Creative Commons License"></a><br>
-This work is licensed under a <a href="https://web.archive.org/web/20210118181615/https://web.archive.org/web/20180831202243/http://creativecommons.org/licenses/by-nc-sa/4.0/" rel="license">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</p>
+
+<!-- #comments David: it's not clear why /circles_files/88x31.png leads to the cc logo (previously it was something else that showed image broken) -->
+<p><a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" rel="license"><img src="/circles_files/88x31.png" alt="Creative Commons License"></a><br>
+This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" rel="license">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</p>
 
 											</div><!-- .entry-content -->
 
@@ -291,7 +293,7 @@ This work is licensed under a <a href="https://web.archive.org/web/2021011818161
 		<footer id="colophon" class="site-footer" role="contentinfo">
 				<div id="secondary" class="sidebar-container" role="complementary">
 		<div class="widget-area masonry" style="position: relative; height: 96px;">
-			<aside id="search-2" class="widget widget_search masonry-brick" style="position: absolute; left: 0px; top: 0px;"><form role="search" method="get" class="search-form" action="https://web.archive.org/web/20210118181615/https://upstartcollaboratory.org/">
+			<aside id="search-2" class="widget widget_search masonry-brick" style="position: absolute; left: 0px; top: 0px;"><form role="search" method="get" class="search-form" action="https://upstartcollaboratory.org/">
 				<label>
 					<span class="screen-reader-text">Search for:</span>
 					<input type="search" class="search-field" placeholder="Search …" value="" name="s">
@@ -301,7 +303,7 @@ This work is licensed under a <a href="https://web.archive.org/web/2021011818161
 	</div><!-- #secondary -->
 
 			<div class="site-info">
-												<a href="https://web.archive.org/web/20210118181615/https://wordpress.org/" class="imprint">
+												<a href="https://wordpress.org/" class="imprint">
 					Proudly powered by WordPress				</a>
 			</div><!-- .site-info -->
 		</footer><!-- #colophon -->
