fixed commitments and circles banner linking to webarchive (previous commit had weird messing around git to allow sync)

--- a/circles.html
+++ b/circles.html
@@ -201,7 +201,7 @@ __wm.bt(725,27,25,2,"web","https://upstartcollaboratory.org/the-circles-maps/","
  
 		<div id="page" class="hfeed site">
 		<header id="masthead" class="site-header" role="banner">
-			<a class="home-link" href="https://web.archive.org/web/20210118162225/https://upstartcollaboratory.org/" title="Upstart Collaboratory" rel="home">
+			<a class="home-link" href="https://upstartcollaboratory.org/" title="Upstart Collaboratory" rel="home">
 				<h1 class="site-title">Upstart Collaboratory</h1>
 				<h2 class="site-description">for Collaborative Culture Designing</h2>
 			</a>
