another webarchive links fix in index

--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@ __wm.bt(725,27,25,2,"web","https://upstartcollaboratory.org/","20210118181940",1
 
 
 
-<p>Look at <a href="https://web.archive.org/web/20210118181940/https://upstartcollaboratory.org/the-circles-maps/">the Circles Maps</a> to learn more about the kind of culture we’re creating.</p>
+<p>Look at <a href="circles.html">the Circles Maps</a> to learn more about the kind of culture we’re creating.</p>
 
 
 
-<p>Look at <a href="https://web.archive.org/web/20210118181940/https://upstartcollaboratory.org/our-commitments-assumptions/">our Commitments &amp; Assumptions</a> to learn more about what that entails.</p>
+<p>Look at <a href="commitments.html">our Commitments &amp; Assumptions</a> to learn more about what that entails.</p>
 
 
 
