--- a/commitments.html
+++ b/commitments.html
@@ -83,13 +83,7 @@ img.emoji {
 <li class="page_item page-item-5 current_page_item"><a href="commitments.html">Our Commitments &amp; Assumptions</a></li>
 <li class="page_item page-item-7"><a href="circles.html">The Circles Maps</a></li>
 </ul></div>
-					<form role="search" method="get" class="search-form" action="https://upstartcollaboratory.org/">
-				<label>
-					<span class="screen-reader-text">Search for:</span>
-					<input type="search" class="search-field" placeholder="Search …" value="" name="s">
-				</label>
-				<input type="submit" class="search-submit" value="Search">
-			</form>				</nav><!-- #site-navigation -->
+        </nav><!-- #site-navigation -->
 			</div><!-- #navbar -->
 		</header><!-- #masthead -->
 
@@ -160,17 +154,6 @@ This work is licensed under a <a href="https://creativecommons.org/licenses/by-n
 
 		</div><!-- #main -->
 		<footer id="colophon" class="site-footer" role="contentinfo">
-				<div id="secondary" class="sidebar-container" role="complementary">
-		<div class="widget-area masonry" style="position: relative; height: 96px;">
-			<aside id="search-2" class="widget widget_search masonry-brick" style="position: absolute; left: 0px; top: 0px;"><form role="search" method="get" class="search-form" action="https://upstartcollaboratory.org/">
-				<label>
-					<span class="screen-reader-text">Search for:</span>
-					<input type="search" class="search-field" placeholder="Search …" value="" name="s">
-				</label>
-				<input type="submit" class="search-submit" value="Search">
-			</form></aside>		</div><!-- .widget-area -->
-	</div><!-- #secondary -->
-
 			<div class="site-info">
 												<a href="https://wordpress.org/" class="imprint">
 					Proudly powered by WordPress				</a>
