--- a/commitments.html
+++ b/commitments.html
@@ -144,7 +144,61 @@ This work is licensed under a <a href="https://creativecommons.org/licenses/by-n
 
 <div id="comments" class="comments-area">
 
+<!-- ✨ Newsletter Subscription Section (Working + Cleaned) -->
+<div id="newsletter" style="padding: 1rem; background-color: #f2f2f2; text-align: center; border-radius: 8px; margin: 2rem 0;">
+  <h2>Subscribe to Our Newsletter</h2>
+  <form action="https://script.google.com/macros/s/AKfycbwv5icDDUiCu2CMwIuazUGOML5rq6Mi87jh-xorg6Ho1xrv16PTFobJOiOxVejPbx-3Rg/exec" method="POST" id="subscribe-form">
+    <input 
+      type="email" 
+      name="email" 
+      placeholder="Enter your email" 
+      required 
+      style="padding: 0.5rem; width: 250px; border: 1px solid #ccc; border-radius: 4px; margin-bottom: 1rem;"
+    >
+    <br>
+    <button 
+      type="submit" 
+      style="padding: 0.5rem 1rem; border: none; background-color: #007BFF; color: white; border-radius: 4px; cursor: pointer;"
+    >
+      Subscribe
+    </button>
+  </form>
 
+  <!-- ✅ SUCCESS POP-UP MESSAGE -->
+  <div 
+    id="success-popup" 
+    style="display: none; margin-top: 1rem; padding: 1rem; background-color: #d4edda; color: #155724; border: 1px solid #c3e6cb; border-radius: 4px;"
+  >
+    🎉 Thank you for subscribing!
+  </div>
+</div>
+
+<!-- 📜 JavaScript Form Handler -->
+<script>
+  document.getElementById('subscribe-form').addEventListener('submit', function(e) {
+    e.preventDefault();
+
+    const form = this;
+    const popup = document.getElementById('success-popup');
+
+    fetch(form.action, {
+      method: 'POST',
+      body: new FormData(form)
+    }).then(() => {
+      // Show popup
+      popup.style.display = 'block';
+      form.reset();
+
+      // Hide after 4 seconds
+      setTimeout(() => {
+        popup.style.display = 'none';
+      }, 4000);
+    }).catch(error => {
+      console.error('Error!', error.message);
+      alert('There was a problem submitting your form. Please try again later.');
+    });
+  });
+</script>
 
 </div><!-- #comments -->
 
