--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ img.emoji {
 
 <!-- ✨ Newsletter Subscription Section (Working + Cleaned) -->
 <div id="newsletter" style="padding: 1rem; background-color: #f2f2f2; text-align: center; border-radius: 8px; margin: 2rem 0;">
-  <h2>Subscribe to Our Newsletter</h2>
+  <h4>Subscribe for Updates</h4>
   <form action="https://script.google.com/macros/s/AKfycbwv5icDDUiCu2CMwIuazUGOML5rq6Mi87jh-xorg6Ho1xrv16PTFobJOiOxVejPbx-3Rg/exec" method="POST" id="subscribe-form">
     <input 
       type="email" 
