Change circles.html email sub header wording

--- a/circles.html
+++ b/circles.html
@@ -166,7 +166,7 @@ This work is licensed under a <a href="https://creativecommons.org/licenses/by-n
 
 <!-- ✨ Newsletter Subscription Section (Working + Cleaned) -->
 <div id="newsletter" style="padding: 1rem; background-color: #f2f2f2; text-align: center; border-radius: 8px; margin: 2rem 0;">
-  <h2>Subscribe to Our Newsletter</h2>
+  <h4>Subscribe for Updates</h4>
   <form action="https://script.google.com/macros/s/AKfycbwv5icDDUiCu2CMwIuazUGOML5rq6Mi87jh-xorg6Ho1xrv16PTFobJOiOxVejPbx-3Rg/exec" method="POST" id="subscribe-form">
     <input 
       type="email" 
